fixed spacing

--- a/styles.css/main.css
+++ b/styles.css/main.css
@@ -490,7 +490,7 @@ li:hover {
 
 @media (max-width: 500px) {
   .container {
-    margin-top: 27vh;
+    margin-top: 23vh;
   }
 
   .section-info h1 {
